kubernetes/frappe-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frappe-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frappe-worker
  template:
    metadata:
      labels:
        app: frappe-worker
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frappe-worker
          image: ecr.digigov.vn/dns/frappe:16rc1
          command:
            - bench
            - worker
          volumeMounts:
            - name: frappe-sites
              mountPath: /home/frappe/frappe-bench/sites
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "2Gi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: frappe-sites
          persistentVolumeClaim:
            claimName: frappe-sites-pvc
