kubernetes/frappe-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frappe-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frappe-nginx
  template:
    metadata:
      labels:
        app: frappe-nginx
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frappe-nginx
          image: ecr.digigov.vn/dns/frappe:16rc1
          command:
            - nginx-entrypoint.sh
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: frappe-sites
              mountPath: /home/frappe/frappe-bench/sites
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 1
            failureThreshold: 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: frappe-sites
          persistentVolumeClaim:
            claimName: frappe-sites-pvc
      hostAliases:
      - ip: 127.0.0.1
        hostnames:
          - doanhnghiepso.digigov.vn
---
apiVersion: v1
kind: Service
metadata:
  name: frappe-nginx
spec:
  type: NodePort
  selector:
    app: frappe-nginx
  ports:
    - port: 8080
      targetPort: 8080
