kubernetes/frappe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frappe-ingress
  labels:
    site: dn.digigov.vn
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: doanhnghiepso.digigov.vn
      http:
        paths:
          - backend:
              service:
                name: frappe-nginx
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: ssl-digi
